home screen: fixed titles and image overlapping

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -496,46 +496,47 @@ body {
 }
 
 .text__containter{
-    transform: translate(17px, 122px);
+    // transform: translate(17px, 122px);
     width: 100vw;
+    margin: 20% 0% 0% 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     // margin: 50px 0px 0px 140px;
         @media (min-width: 319px) and (max-width: 376px){
-            transform: translate(37px, 122px);
+            // transform: translate(37px, 122px);
         }
         @media (min-width: 481px) and (max-width: 768px){
-            transform: translate(140px, 220px);
+            // transform: translate(140px, 220px);
         }
         @media (min-width: 769px) and (max-width: 1024px){
-            transform: translate(10px, 240px);
+            // transform: translate(10px, 240px);
         }
         @media (min-width: 1025px) {
-            transform: translate(10px, 320px);
+            // transform: translate(10px, 320px);
         }
 }
 
 .poem__container {
-   transform: translateX(200px);
+//    transform: translateX(200px);
    font-style: italic;
    font-size: 16px;
-    // margin: 50px 0px 0px 140px;
+   margin: 10% 0px 0px 50%;
         @media (min-width: 319px) and (max-width: 374px){
-            transform: translateX(150px);
+            // transform: translateX(150px);
             font-size: 14px;
         }
         @media (min-width: 481px) and (max-width: 768px){
-            transform: translate(350px, -60px);
+            // transform: translate(350px, -60px);
             font-size: 34px;
         }
         @media (min-width: 769px) and (max-width: 1024px){
-            transform: translate(340px, -60px);
+            // transform: translate(340px, -60px);
             font-size: 34px;
         }
         @media (min-width: 1025px) {
-            transform: translate(340px, -60px);
+            // transform: translate(340px, -60px);
             font-size: 34px;
         }
 }
@@ -559,18 +560,19 @@ body {
 // }
 .signature__image {
     width: 90px;
-    transform: translate(35px, -20px);
+    margin: -40% 0% 0% 10%;
+    // transform: translate(35px, -20px);
 
         @media (min-width: 481px) and (max-width: 1024px){
             width: 250px;
-            transform: translate(100px, -80px);
+            // transform: translate(100px, -80px);
         }
         @media (min-width: 769px) and (max-width: 1024px){
 
         }
         @media (min-width: 1025px) {
             width: 350px;
-            transform: translate(100px, -80px);
+            // transform: translate(100px, -80px);
         }
 }
 
@@ -585,8 +587,8 @@ body {
 
         @media (min-width: 481px) and (max-width: 768px){
             font-size: 50px;
-            padding-bottom: 30px;
-            padding-left: 30px;
+            margin-left: 4%;
+            // padding-left: 30px;
         }
         @media (min-width: 769px) and (max-width: 1024px){
             font-size: 60px;
@@ -606,19 +608,20 @@ body {
     padding-bottom: 0;
         @media (min-width: 481px) and (max-width: 768px){
             font-size: 30px;
-            padding-left: -10px;
+            // padding-left: -10px;
             margin-top: 20px;
             padding-bottom: 20px;
         }
         @media (min-width: 769px) and (max-width: 1024px){
             font-size: 40px;
-            margin-left: -30px;
+            // margin-left: -30px;
             padding-top: 10px;
         }
         @media (min-width: 1025px) {
             font-size: 50px;
-            margin-left: 140px;
+            // margin-left: 140px;
             padding-top: 20px;
+            margin-left: 140px;
         }
 }
 
